2011-12-06  Chong Yidong  <cyd@gnu.org>

	* progmodes/cc-fonts.el (c-annotation-face): Use defface.

2011-12-06  Juanma Barranquero  <lekktu@gmail.com>

	* textmodes/table.el (table-shorten-cell): Fix typo.

2011-12-05  Christopher Genovese  <genovese.cr@gmail.com>  (tiny change)

	* emacs-lisp/assoc.el (aput): Fix return value (bug#10146)

2011-12-05  Eli Zaretskii  <eliz@gnu.org>

	* descr-text.el (describe-char): Fix display of strong
	right-to-left characters and directional embeddings and overrides.

	* simple.el (what-cursor-position): Fix display of codepoints of
	strong right-to-left characters.

2011-12-05  Chong Yidong  <cyd@gnu.org>

	* faces.el (read-color): Doc fix.

2011-12-05  Glenn Morris  <rgm@gnu.org>

	* align.el (align--set-marker): Add doc-string.
	Don't try to move something that is not a marker.  (Bug#10216)

2011-12-04  Glenn Morris  <rgm@gnu.org>

	* calendar/appt.el (appt-add): Rewrite the interactive-spec to avoid
	overly zealous deletion of trailing whitespace.

2011-12-04  Juanma Barranquero  <lekktu@gmail.com>

	* server.el (server-delete-client): On Windows, do not try to delete
	the only terminal.
	(server-process-filter): On Windows, treat requests for a tty frame as
	if they were for a GUI frame if the running server is in GUI mode.

2011-12-03  Glenn Morris  <rgm@gnu.org>

	* textmodes/texinfmt.el (batch-texinfo-format): Doc fix.  (Bug#10207)

2011-12-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* electric.el: Streamline electric-indent's hook.
	(electric-indent-chars): Revert to simple list.
	(electric-indent-functions): New var.
	(electric-indent-post-self-insert-function): Use it.

	* progmodes/prolog.el (prolog-find-value-by-system): Avoid error when
	there's no inferior buffer (bug#10196).
	(prolog-consult-compile): Don't use toggle-read-only.

2011-12-02  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-maybe-open-connection): Handle user
	interrupt.  (Bug#10187)
