@@ -1,3 +1,7 @@
+2011-12-06  Glenn Morris  <rgm@gnu.org>
+
+	* emacs-lisp/package.el (package-archives): Doc fix re riskiness.
+
 2011-12-06  Chong Yidong  <cyd@gnu.org>
 
 	* progmodes/cc-fonts.el (c-annotation-face): Use defface.
